# Bookforge-non-experimental

./: .gitignore  CLAUDE.md  README.md  artifacts.json  causality.py  cli.py  cli_tools.py  continuity.py  drafts.py  exporters.py  main.py  orchestrator.py  pacing.py  package-lock.json  package.json  passes.py  phase4.md  pyproject.toml  roadmap.md  scene_cards_example.json  scene_db_utils.py
Bookforge/: PHASE0_COMMIT.md  README.md  pyproject.toml
Bookforge/config/: env_vars.json
Bookforge/docs/: architecture.md  architecture_boundaries.md  cli_commands.md  interface_strategy.md  module_responsibilities.md  pipeline.md  service_contracts.md  system_roles.md
Bookforge/examples/: project_manifest_example.json
Bookforge/examples/minimal_brief/: mystery_brief.json  project_brief.json
Bookforge/literary_ai/: __init__.py  cli.py  ollama_client.py  sqlite_store.py
Bookforge/literary_ai/schemas/: __init__.py  artifact.py  book.py  chapter.py
Bookforge/plans/: popebot_execution.md
Bookforge/plans/roadmap/: 00_overview.md  01_phase_0_foundation.md  02_phase_1_story_planning.md  99_execution_order.md
Bookforge/plans/standards/: artifact_naming.md  artifact_rules.md  artifact_structure.md  artifact_versioning.md  brief_inheritance_rules.md  coding_rules.md  definition_of_done.md  failure_reporting.md  gating_rules.md  length_profiles.md  path_rules.md  planning_rules.md  pr_rules.md  pressure_rules.md  project_manifest_rules.md  prompt_authoring_rules.md  story_complexity_budget.md
Bookforge/plans/tasks/: README.md  phase_0.yaml  phase_1.yaml
Bookforge/prompts/planning/: beats_to_chapters.md  brief_to_skeleton.md  complexity_review.md  payoff_review.md  planning_review.md  pressure_review.md  skeleton_to_beats.md
Bookforge/prompts/system/: json_repair.md
Bookforge/schemas/: beat_outline.schema.json  chapter_plan.schema.json  complexity_audit.schema.json  payoff_audit.schema.json  planning_assessment.schema.json  pressure_audit.schema.json  project_brief.schema.json  project_manifest.schema.json  scene_packet.schema.json  story_skeleton.schema.json
Bookforge/scripts/: setup_env.sh
Bookforge/src/bookforge/: __init__.py  cli.py  ollama_client.py
bookforge/: README.md
bookforge/literary_ai/: README.md  ollama_client.py  pyproject.toml
bookforge/literary_ai/cli/: main.py
bookforge/literary_ai/schemas/: base.py  book.py
bookforge/literary_ai/store/: sqlite_store.py
checkers/: character_consistency.py  voice.py
config/: Phase8.md  models.py  (+12 more)
(+102 files in other folders)
