[tool.poetry]
name = "universe_bible"
version = "0.1.0"
description = "A tool for managing universe bible data with Ollama integration"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.21.0"
pytest = "^7.0.0"
sqlite3 = "^3.44.0"
httpx = "^0.24.1"
rich = "^10.14.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = "poetry>=0.6"
build-backend = "poetry.core.masonry.api"