[tool.poetry]
name = "bookforge"
version = "0.1.0"
description = "A library for literary AI projects"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ollama = "0.1.0"
typer = "0.30.0"
pytest = "7.1.2"
sqlite3 = "3.42.0"

[tool.poetry.dev-dependencies]
black = "22.12.0"

[build-system]
requires = "poetry >= 1.0"
build-backend = "poetry.build.api"
